fix: adjust top positioning in About.css for better layout alignment

--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -4,7 +4,7 @@
     background-color:  rgb(0, 102, 165);
     width: 100%;
     position: relative;
-    top: -70px;
+    top: -80px;
 
 }
 
